Revision history for XML-Grammar-Fiction.

0.0.2       Wed Nov 25 11:55:41 IST 2009
        - Various refactorings / code cleanup:
            - removed old methods.
            - got rid of the _with_curr_line() anti-abstrcation.
            - converted the parsing exceptions to Exception-Class 
            ( see lib/XML/Grammar/Fiction/Err.pm )
            - Extract the Struct/Tag.pm helper class.
            - extracted the lib/XML/Grammar/Fiction/RendererBase.pm
            and lib/XML/Grammar/Fiction/RNG_Renderer.pm base classes.
            - Convert the proto-text parser (::Parser::QnD) to a 
            non-procedurally recursive one and extracted many methods from it.

0.0.1       Thu Nov  5 18:59:27 IST 2009
        - Forked from XML-Grammar-Screenplay-0.0600+trunk.
        - Changed to the Fiction proto-text format and XML format.
        - Changed the tests to be in accordance with the new semantics.
        - First CPAN release.

Revision history for XML-Grammar-Screenplay

        - Added the resources and keywords to the Build.PL and META.yml.

0.0600  Fri Oct  9 11:35:30 IST 2009
        - Converted the generated Screenplay-XML to its own namespace:
        http://web-cpan.berlios.de/modules/XML-Grammar-Screenplay/screenplay-xml-0.2/
        - Adapted the stylesheets, the RelaxNG schema, etc. to that while
        adapting the test scripts. 

0.0503  Wed Jul 29 10:12:38 IDT 2009
        - Included a "package XML::Grammar::Screenplay::FromProto::Nodes"
        statement at the top of:
        lib/XML/Grammar/Screenplay/FromProto/Nodes.pm
        Because otherwise the rpm builder was confused.

0.0502  Wed Mar  4 22:19:43 IST 2009
        - Upgraded inc/XML/Grammar/Builder.pm to 0.0101 to (hopefully)
        handle the extradata properly under all conditions.

0.0501  Tue Mar  3 19:38:22 IST 2009
        - Changed the Build.PL to use XML::Grammar::Builder.
            - changed the tests accordingly, due to the lack of 
            "blib/extradata".
