@@ -1,5 +1,7 @@
 Revision history for XML-Grammar-Fiction.
 
+        - Add the script contrib/docbook-to-fiction-xml-txt.pl .
+
 0.0.2       Wed Nov 25 11:55:41 IST 2009
         - Various refactorings / code cleanup:
             - removed old methods.
